np-99994-990004-1002-dev-dev-prod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-990004-1002-dev
  name: 99994-990004-1002-dev.dev-prod
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99994-990004-1001-prod
      ports:
        - protocol: TCP
          port: 1521
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              namespace: 99993-990003-1003-dev
      ports:
        - protocol: TCP
          port: 1521
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
